crates/toml_edit/tests/snapshots/invalid/table/no-close-05.stderr
TOML parse error at line 1, column 11
  |
1 | [fwfw.wafw
  |           ^
unclosed table, expected `]`
